[gd_scene load_steps=12 format=3 uid="uid://cyuymrir6i46d"]

[ext_resource type="Script" uid="uid://be278rpydf0uk" path="res://scenes/rooms/world/card.gd" id="1_eq2pq"]
[ext_resource type="Texture2D" uid="uid://d384g3pm2vx72" path="res://assets/texture/card/cardbase.png" id="2_qy156"]
[ext_resource type="Shader" uid="uid://dsgjvsf04fuvi" path="res://assets/shader/shadow.gdshader" id="2_ywdbo"]
[ext_resource type="Texture2D" uid="uid://c4ftwqgtd2gj2" path="res://assets/texture/card/solar_panel.png" id="3_qncdo"]
[ext_resource type="FontFile" uid="uid://drccod80byf6q" path="res://assets/fonts/pixelmix.ttf" id="4_1x5m4"]
[ext_resource type="Shader" uid="uid://b627otvwj2hs" path="res://assets/shader/shiny_highlight.gdshader" id="6_7e8mi"]
[ext_resource type="Texture2D" uid="uid://b6br10akbls0i" path="res://assets/texture/icons/arrow.png" id="7_8r4y3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7e8mi"]
shader = ExtResource("2_ywdbo")
shader_parameter/debug = false
shader_parameter/border_scale = 2.0
shader_parameter/shadow_offset = Vector2(-5, -5)
shader_parameter/color = null
shader_parameter/blur_amount = 0.0
shader_parameter/shadow_scale = 1.5
shader_parameter/disable_rotating = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1x5m4"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_ywdbo"]
Panel/styles/panel = SubResource("StyleBoxFlat_1x5m4")
PanelContainer/styles/panel = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8r4y3"]
shader = ExtResource("6_7e8mi")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.09
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 0.7
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 0.338

[node name="Card" type="Node2D"]
script = ExtResource("1_eq2pq")

[node name="CardBase" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7e8mi")
texture = ExtResource("2_qy156")

[node name="Control" type="Control" parent="CardBase"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -64.0
offset_right = -50.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ywdbo")

[node name="MarginContainer" type="MarginContainer" parent="CardBase/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="CardBase/Control/MarginContainer"]
layout_mode = 2

[node name="TopPanel" type="Panel" parent="CardBase/Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_filter = 1

[node name="ModuleIcon" type="Sprite2D" parent="CardBase/Control/MarginContainer/VBoxContainer/TopPanel"]
position = Vector2(45, 44)
texture = ExtResource("3_qncdo")

[node name="BottomPanel" type="Panel" parent="CardBase/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="NameLabel" type="Label" parent="CardBase/Control/MarginContainer/VBoxContainer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_1x5m4")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highlight" type="ColorRect" parent="CardBase/Control/MarginContainer"]
visible = false
material = SubResource("ShaderMaterial_8r4y3")
layout_mode = 2
mouse_filter = 2

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(58, 3)
scale = Vector2(0.3125, 2.0625)
texture = ExtResource("7_8r4y3")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -9.0
